add init/close bangs
add initclosebang objects

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -95,7 +95,9 @@ pd_SOURCES = \
     x_time.c \
     x_vexp.c \
     x_vexp_fun.c \
-    x_vexp_if.c
+    x_vexp_if.c \
+    closebang.c \
+    initbang.c
 
 # declared for ASIO
 nodist_EXTRA_pd_SOURCES =
