transitioned docspath into plugin file; use filenewdir & fileopendir consistently, default to home dir when opening GUI first for all platforms, default to home dir for Windows; dialog_path now sets minsize based on widget size due to optional sections

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -48,7 +48,8 @@ TCLFILES = \
     pdtk_text.tcl \
     scrollbox.tcl \
     pd_guiprefs.tcl \
-    pd_deken.tcl
+    pd_deken.tcl \
+    pd_docspath.tcl
 
 LOCAL_TCLFILES = \
     iemgui_dynamic_strings.tcl \
