renamed pd_docspath to pd_docsdir

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -49,7 +49,7 @@ TCLFILES = \
     scrollbox.tcl \
     pd_guiprefs.tcl \
     pd_deken.tcl \
-    pd_docspath.tcl
+    pd_docsdir.tcl
 
 LOCAL_TCLFILES = \
     iemgui_dynamic_strings.tcl \
